--- a/products.html
+++ b/products.html
@@ -117,16 +117,17 @@
       <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
     </div>
   </footer>
-<!-- ===== Bottom Navigation (Mobile) ===== -->
+<!-- Bottom Navigation -->
 <div class="bottom-nav" role="navigation" aria-label="เมนูด้านล่าง">
   <div class="inner">
-    <a href="index.html"     data-page="index.html"><span class="icon">🏠</span><span>หน้าแรก</span></a>
-    <a href="products.html"  data-page="products.html"><span class="icon">🛍️</span><span>ผลิตภัณฑ์</span></a>
-    <a href="about.html"     data-page="about.html"><span class="icon">ℹ️</span><span>เกี่ยวกับเรา</span></a>
-    <a href="services.html"  data-page="services.html"><span class="icon">💆‍♀️</span><span>สปา</span></a>
-    <a href="contact.html"   data-page="contact.html"><span class="icon">📞</span><span>ติดต่อ</span></a>
+    <a href="index.html"     data-page="index.html">หน้าแรก</a>
+    <a href="products.html"  data-page="products.html">ผลิตภัณฑ์</a>
+    <a href="about.html"     data-page="about.html">เกี่ยวกับเรา</a>
+    <a href="services.html"  data-page="services.html">สปา</a>
+    <a href="contact.html"   data-page="contact.html">ติดต่อ</a>
   </div>
 </div>
+
 
 <!-- สคริปต์หลักของเว็บ (ให้แน่ใจว่ามีอยู่ทุกหน้า) -->
 <script src="assets/app.js"></script>
