--- a/contact.html
+++ b/contact.html
@@ -3,9 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ติดต่อเรา | Heaven and Beauty</title>
+  <title>ติดต่อ | Heaven and Beauty</title>
   <link rel="stylesheet" href="assets/style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" crossorigin="anonymous"/>
 </head>
 <body>
   <header>
@@ -28,42 +27,46 @@
   <section class="page-hero">
     <div class="inner">
       <h1>ติดต่อเรา</h1>
+      <p class="lead">เราพร้อมให้คำปรึกษาและดูแลความงามของคุณด้วยใจ</p>
     </div>
   </section>
 
-  <section class="contact">
+  <section class="contact" id="contact">
     <div class="container">
-      <p class="contact-subtitle">เราพร้อมให้คำปรึกษาและดูแลความงามของคุณด้วยใจ</p>
-
+      <p class="contact-subtitle">ติดตามข่าวสารและเคล็ดลับความงามเฉพาะจากเรา</p>
       <div class="contact-info">
         <div class="contact-item">
-          <strong>สาขาหลัก</strong><br>
-          โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000
+          <span class="contact-item-icon" aria-hidden="true">📍</span>
+          <h3>สาขาหลัก</h3>
+          <p>โครงการ HAVANA<br>เลขที่777 333 Cho Ho, เมือง Nakhon Ratchasima 30000</p>
         </div>
         <div class="contact-item">
-          <strong>โทรศัพท์</strong><br>
-          098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.
+          <span class="contact-item-icon" aria-hidden="true">📞</span>
+          <h3>โทรศัพท์</h3>
+          <p>098-549-7939<br>เปิดทุกวัน 10:00–22:00 น.</p>
         </div>
         <div class="contact-item">
-          <strong>อีเมล</strong><br>
-          info@heavenbeauty.com<br>support@heavenbeauty.com<br>ตอบกลับภายใน 24 ชั่วโมง
+          <span class="contact-item-icon" aria-hidden="true">💌</span>
+          <h3>อีเมล</h3>
+          <p>info@heavenbeauty.com<br>support@heavenbeauty.com<br><span>ตอบกลับภายใน 24 ชั่วโมง</span></p>
         </div>
       </div>
 
+      <!-- Google Map ฝัง -->
       <div class="map-wrap" role="region" aria-label="แผนที่สาขาหลัก">
         <iframe
           loading="lazy"
           allowfullscreen
           referrerpolicy="no-referrer-when-downgrade"
-          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3852.6128267044464!2d102.1471251!3d15.0695165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31194bd6f78b22cd%3A0x8bb1d3e4f7001978!2z4LmB4Liq4LiH4LmE4LiX4Lii4LiZ4Lin4LiU4LmA4Lie4Li34LmI4Lit4Liq4Li44LiC4Lig4Liy4Lie!5e0!3m2!1sen!2sth!4v1700000000000!5m2!1sen!2sth">
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3852.6128267044464!2d102.1471251!3d15.0695165!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x31194bd6f78b22cd%3A0x8bb1d3e4f7001978!2z4LmB4Liq4LiH4LmE4LiX4Lii4LiZ4Lin4LiU4LmA4Lie4Li34LmI4Lit4Liq4Li44LiC4Lig4Liy4Lie!5e0!3m2!1sen!2sth!4v1759462544499!5m2!1sen!2sth">
         </iframe>
       </div>
 
       <div class="social-icons" aria-label="โซเชียลมีเดีย">
-        <a href="https://www.facebook.com/people/Sangthai-massage/100089101373153/" target="_blank" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
-        <a href="https://instagram.com/yourpage" target="_blank" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
-        <a href="https://lin.ee/piYhcCd" target="_blank" aria-label="LINE"><i class="fab fa-line"></i></a>
-        <a href="https://www.tiktok.com/@sittined.n" target="_blank" aria-label="TikTok"><i class="fab fa-tiktok"></i></a>
+        <a href="https://www.facebook.com/people/Sangthai-massage/100089101373153/?rdid=Rae5xEhsYZ1YKkLV&share_url=https%3A%2F%2Fwww.facebook.com%2Fshare%2F12DZ9Pgnbcz%2F" target="_blank" aria-label="Facebook">f</a>
+        <a href="https://instagram.com/yourpage" target="_blank" aria-label="Instagram">ig</a>
+        <a href="https://lin.ee/piYhcCd" target="_blank" aria-label="LINE">LINE</a>
+        <a href="https://www.tiktok.com/@sittined.n" target="_blank" aria-label="TikTok">tt</a>
       </div>
     </div>
   </section>
@@ -74,20 +77,16 @@
     </div>
   </footer>
 
- <!-- Bottom Navigation -->
-<div class="bottom-nav" role="navigation" aria-label="เมนูด้านล่าง">
-  <div class="inner">
-    <a href="index.html"     data-page="index.html">หน้าแรก</a>
-    <a href="products.html"  data-page="products.html">ผลิตภัณฑ์</a>
-    <a href="about.html"     data-page="about.html">เกี่ยวกับเรา</a>
-    <a href="services.html"  data-page="services.html">สปา</a>
-    <a href="contact.html"   data-page="contact.html">ติดต่อ</a>
-  </div>
-</div>
+  <nav class="bottom-nav" aria-label="เมนูด้านล่าง">
+    <div class="inner">
+      <a href="index.html"    data-page="index.html">หน้าแรก</a>
+      <a href="products.html" data-page="products.html">ผลิตภัณฑ์</a>
+      <a href="about.html"    data-page="about.html">เกี่ยวกับเรา</a>
+      <a href="services.html" data-page="services.html">สปา</a>
+      <a href="contact.html"  data-page="contact.html">ติดต่อ</a>
+    </div>
+  </nav>
 
-
-<!-- สคริปต์หลักของเว็บ (ให้แน่ใจว่ามีอยู่ทุกหน้า) -->
-<script src="assets/app.js"></script>
-
+  <script src="assets/app.js"></script>
 </body>
 </html>
