--- a/products.html
+++ b/products.html
@@ -82,7 +82,7 @@
         <!-- card 4 -->
         <div class="product-card" data-category="wellness">
           <div class="product-image">
-            <img src="https://i.postimg.cc/TPRqh8kd/วิตซี.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี" loading="lazy">
+            <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี" loading="lazy">
           </div>
           <div class="product-info">
             <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี</h3>
