--- a/products.html
+++ b/products.html
@@ -54,7 +54,7 @@
         <!-- card 2 -->
         <div class="product-card" data-category="skincare">
           <div class="product-image">
-            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
+            <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อะโทมี่ แอบโซลูท</h3>
@@ -82,7 +82,7 @@
         <!-- card 4 -->
         <div class="product-card" data-category="wellness">
           <div class="product-image">
-            <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี" loading="lazy">
+            <img src="https://i.postimg.cc/q7FDMKSz/LINE-ALBUM-250925-5.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี" loading="lazy">
           </div>
           <div class="product-info">
             <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ ไวทัล คัลเลอร์ วิตามิน ซี</h3>
