--- a/products.html
+++ b/products.html
@@ -68,7 +68,7 @@
         <!-- card 3 -->
         <div class="product-card" data-category="wellness">
           <div class="product-image">
-            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม" loading="lazy">
+            <img src="https://i.postimg.cc/RFR3L1mq/LINE-ALBUM-250925-7.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม" loading="lazy">
           </div>
           <div class="product-info">
             <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม</h3>
