--- a/services.html
+++ b/services.html
@@ -72,7 +72,7 @@
   <section class="price-section" aria-labelledby="price-heading">
     <div class="container">
       <div class="price-header">
-        <img src="assets/logo-spa.png" alt="แสมไทย นวดเพื่อสุขภาพ" class="price-logo" />
+        <img src="https://i.postimg.cc/gjyQtJjJ/382091993-279156095064434-3781582419899621334-n.jpg" alt="แสงไทย นวดเพื่อสุขภาพ" class="price-logo" />
         <div>
           <h2 id="price-heading">ตารางราคาสปาและบริการนวด</h2>
           <p class="subtitle">Price List — Spa &amp; Massage</p>
