--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <section class="hero" id="home">
     <div class="container inner">
       <h1>ยินดีต้อนรับสู่ Heaven and Beauty</h1>
-      <p>เราคัดสรรส่วนผสมที่ดีที่สุดจากธรรมชาติ เพื่อสร้างสรรค์ผลิตภัณฑ์ออร์แกนิคที่ปลอดภัยและอ่อนโยนต่อผิวคุณ ดูแลสุขภาพและความงามอย่างธรรมชาติ</p>
+      <p>เราคัดสรรส่วนผสมดีที่สุดจากธรรมชาติ เพื่อสร้างสรรค์ผลิตภัณฑ์ออร์แกนิคที่ปลอดภัยและอ่อนโยนต่อผิวคุณ</p>
       <a href="products.html" class="cta-button">สำรวจผลิตภัณฑ์</a>
     </div>
   </section>
