--- a/services.html
+++ b/services.html
@@ -36,7 +36,7 @@
     </div>
   </section>
 
-  <!-- Highlight Services (การ์ด 3 ใบ) -->
+  <!-- Highlight Services (การ์ด 3 ใบ) 
   <section class="services" aria-labelledby="svc-heading">
     <div class="container">
       <h2 id="svc-heading" style="margin:0 0 10px;font-size:clamp(20px,3.2vw,26px)">บริการยอดนิยม</h2>
@@ -66,7 +66,7 @@
         </div>
       </div>
     </div>
-  </section>
+  </section> -->
 
   <!-- Price Table (รวมเข้าเพจแล้ว) -->
   <section class="price-section" aria-labelledby="price-heading">
