--- a/services.html
+++ b/services.html
@@ -102,7 +102,7 @@
               <td>130</td><td>250</td><td>380</td><td>450</td><td>580</td><td>700</td>
             </tr>
             <tr>
-              <th class="service">นวดไทยเน้นลึก<br><small>Deep Tissue Muscle — Thai Full body massage</small></th>
+              <th class="service">นวดไทยแก้อาการ<br><small>Deep Tissue Muscle — Thai Full body massage</small></th>
               <td>180</td><td>350</td><td>530</td><td>650</td><td>830</td><td>1,000</td>
             </tr>
             <tr>
@@ -114,7 +114,7 @@
               <td>180</td><td>350</td><td>530</td><td>650</td><td>830</td><td>1,000</td>
             </tr>
             <tr>
-              <th class="service">นวดออยเน้นลึก<br><small>Deep Tissue Muscle Oil massage</small></th>
+              <th class="service">นวดออยรีดเส้นแก้อาการ<br><small>Deep Tissue Muscle Oil massage</small></th>
               <td>230</td><td>450</td><td>680</td><td>850</td><td>1,080</td><td>1,300</td>
             </tr>
           </tbody>
