--- a/index.html
+++ b/index.html
@@ -99,23 +99,23 @@
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon"><i class="fas fa-spa"></i></div>
-          <h3>นวดอโรมาเธอราปี</h3>
-          <p>ผ่อนคลายด้วยน้ำมันหอมระเหยบริสุทธิ์ ลดความเครียดและบำรุงผิวพรรณ</p>
-          <div class="service-price">60 นาที / ฿1,200</div>
+          <h3>นวดไทยทั้งตัว</h3>
+          <p>Thai Full body massage</p>
+          <div class="service-price">60 นาที / ฿250</div>
           <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
         </div>
         <div class="service-card">
           <div class="service-icon"><i class="fas fa-hand-holding-heart"></i></div>
-          <h3>นวดแผนไทย</h3>
-          <p>ศาสตร์แห่งการบำบัดแบบดั้งเดิม คลายกล้ามเนื้อและปรับสมดุลร่างกาย</p>
-          <div class="service-price">90 นาที / ฿990</div>
+          <h3>นวดเท้า</h3>
+          <p>Foot massage</p>
+          <div class="service-price">60 นาที / ฿250</div>
           <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
         </div>
         <div class="service-card">
           <div class="service-icon"><i class="fas fa-hot-tub"></i></div>
-          <h3>สปาหินร้อน</h3>
-          <p>ใช้หินภูเขาไฟเพื่อผ่อนคลายกล้ามเนื้อ กระตุ้นการไหลเวียนโลหิต</p>
-          <div class="service-price">75 นาที / ฿1,800</div>
+          <h3>นวดหลัง คอ บ่า ไหล่</h3>
+          <p>Back & Shoulder</p>
+          <div class="service-price">60 นาที / ฿350</div>
           <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" class="line-btn">จองผ่าน LINE</a>
         </div>
       </div>
