--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <!-- 2 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/HLp4jGSC/image.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
+            <img src="https://i.postimg.cc/g0QTrJ6j/LINE-ALBUM-250925-3.jpg" alt="อะโทมี่ แอบโซลูท" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อะโทมี่ แอบโซลูท</h3>
@@ -77,11 +77,11 @@
         <!-- 3 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/yNVXWqfB/image.jpg" alt="อาหารเสริมคอลลาเจน" loading="lazy">
+            <img src="https://i.postimg.cc/hPqDtQR2/LINE_ALBUM_คูชชั่น_251015_1.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม" loading="lazy">
           </div>
           <div class="product-info">
-            <h3>อาหารเสริมคอลลาเจน</h3>
-            <p>คอลลาเจนจากธรรมชาติ ช่วยบำรุงผิวจากภายใน</p>
+            <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม</h3>
+            <p>ตัวกันเเฮงค์</p>
             <div class="product-price">฿xxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
