--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <nav class="navbar" aria-label="หลัก">
         <div class="nav-left">
           <a href="index.html" class="brand" aria-label="Heaven and Beauty">
-            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="โลโก้ Heaven and Beauty" />
+            <img src="https://i.postimg.cc/bNzcsK30/LOGO-1.png" alt="โลโก้ Heaven and Beauty" />
           </a>
           <ul class="nav-menu" id="navMenu">
             <li><a href="index.html" class="active">หน้าแรก</a></li>
