--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
         <!-- 3 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/hPqDtQR2/LINE_ALBUM_คูชชั่น_251015_1.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม" loading="lazy">
+            <img src="https://i.postimg.cc/RFR3L1mq/LINE_ALBUM_เซตทำความสะอาดร่างกาย_250925_7.jpg" alt="ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม" loading="lazy">
           </div>
           <div class="product-info">
             <h3>ผลิตภัณฑ์เสริมอาหาร อะโทมี่ เฮโมฮิม</h3>
