--- a/index.html
+++ b/index.html
@@ -49,11 +49,11 @@
         <!-- 1 -->
         <div class="product-card">
           <div class="product-image">
-            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
+            <img src="https://i.postimg.cc/L8L8VkBf/LINE-ALBUM-250925-7.jpg" alt="อะโทมี่ เอเด็ม คลีนเซอร์" loading="lazy">
           </div>
           <div class="product-info">
-            <h3>อะโทมี่ เฟรช ซัน โลชั่น</h3>
-            <p>ครีมกันแดดสูตรอินออร์แกนิก</p>
+            <h3>อะโทมี่ เอเด็ม คลีนเซอร์</h3>
+            <p>ทำความสะอาดอย่างล้ำลึกบริเวณจุดซ่อนเร้น</p>
             <div class="product-price">฿xxxx</div>
             <div class="product-actions">
               <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
