--- a/products.html
+++ b/products.html
@@ -107,6 +107,20 @@
             </div>
           </div>
         </div>
+        <!-- card 6 -->
+        <div class="product-card" data-category="wellness">
+          <div class="product-image">
+            <img src="https://i.postimg.cc/L8L8VkBf/LINE-ALBUM-250925-7.jpg" alt="อะโทมี่ เอเด็ม คลีนเซอร์" loading="lazy">
+          </div>
+          <div class="product-info">
+            <h3>อะโทมี่ เอเด็ม คลีนเซอร์</h3>
+            <p>ทำความสะอาดอย่างล้ำลึกบริเวณจุดซ่อนเร้น</p>
+            <div class="product-price">฿xxxx</div>
+            <div class="product-actions">
+              <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">สั่งซื้อ/แชทไลน์</a>
+            </div>
+          </div>
+        </div>
         <!-- เพิ่มสินค้าอื่นได้ตามต้องการ -->
       </div>
     </div>
