--- a/services.html
+++ b/services.html
@@ -140,7 +140,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty</p>
+      <p>&copy; <span id="year"></span>© Heaven & Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
     </div>
   </footer>
 
