--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
+      <p>&copy; <span id="year"></span>© Heaven & Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
     </div>
   </footer>
 
