--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
     <div class="container">
       <nav class="navbar" aria-label="หลัก">
         <div class="nav-left">
-          <a href="index.html" class="brand"><img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty"></a>
+          <a href="index.html" class="brand"><img src="https://i.postimg.cc/rwjSqtzB/LOGO_1.png" alt="Heaven and Beauty"></a>
           <ul class="nav-menu" id="navMenuTop">
             <li><a href="index.html">หน้าแรก</a></li>
             <li><a href="products.html">ผลิตภัณฑ์</a></li>
