--- a/products.html
+++ b/products.html
@@ -13,7 +13,7 @@
       <nav class="navbar">
         <div class="nav-left">
           <a href="index.html" class="brand">
-            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty" />
+            <img src="https://i.postimg.cc/rwjSqtzB/LOGO_1.png" alt="Heaven and Beauty" />
           </a>
           <ul class="nav-menu" id="navMenuTop">
             <li><a href="index.html">หน้าแรก</a></li>
