--- a/services.html
+++ b/services.html
@@ -15,7 +15,7 @@
       <nav class="navbar" aria-label="เมนูหลัก">
         <div class="nav-left">
           <a href="index.html" class="brand" aria-label="Heaven and Beauty — กลับหน้าแรก">
-            <img src="https://i.postimg.cc/q7Z9WpbC/Black-and-White-Elegant-Floral-Beauty-Salon-Logo.png" alt="Heaven and Beauty">
+            <img src="https://i.postimg.cc/rwjSqtzB/LOGO_1.png" alt="Heaven and Beauty">
           </a>
           <ul class="nav-menu" id="navMenuTop" role="menubar">
             <li role="none"><a role="menuitem" href="index.html">หน้าแรก</a></li>
