--- a/services.html
+++ b/services.html
@@ -123,6 +123,20 @@
           * ทุกบริการรวมค่าบริการแล้ว — จองคิวผ่าน LINE:
           <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">คลิกที่นี่</a>
         </p>
+        <div class="price-table-wrapper">
+  <table class="price-table" aria-describedby="price-note" id="price-table">
+    <!-- ... thead/tbody ตามเดิม ... -->
+  </table>
+
+  <!-- ✅ โหมดการ์ดสำหรับมือถือ (JS จะเติมการ์ดให้อัตโนมัติ) -->
+  <div id="price-cards" class="price-cards hidden" aria-hidden="true"></div>
+
+  <p id="price-note" class="price-note">
+    * ทุกบริการรวมค่าบริการแล้ว — จองคิวผ่าน LINE:
+    <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">คลิกที่นี่</a>
+  </p>
+</div>
+
       </div>
     </div>
   </section>
