--- a/services.html
+++ b/services.html
@@ -145,7 +145,7 @@
   <section aria-label="โปรโมชัน" style="padding:0 0 64px">
     <div class="container">
       <div style="background:linear-gradient(90deg,#fff0f6,#e0f2fe);border:1px solid #f4a6c1;border-radius:16px;padding:18px 20px;display:flex;flex-wrap:wrap;gap:10px;align-items:center;justify-content:space-between;box-shadow:0 10px 24px rgba(0,0,0,.06)">
-        <p style="margin:0;color:#7a3a53;font-weight:700">จองล่วงหน้ารับส่วนลด ⭐</p>
+        <p style="margin:0;color:#7a3a53;font-weight:700">จองล่วงหน้าได้เลย ⭐</p>
         <a class="line-btn" href="https://lin.ee/piYhcCd" target="_blank" rel="noopener" aria-label="กดเพื่อจองคิวผ่าน LINE">จองผ่าน LINE</a>
       </div>
     </div>
