--- a/services.html
+++ b/services.html
@@ -119,10 +119,10 @@
             </tr>
           </tbody>
         </table>
-        <p id="price-note" class="price-note">
+     <!--    <p id="price-note" class="price-note">
           * ทุกบริการรวมค่าบริการแล้ว — จองคิวผ่าน LINE:
           <a href="https://lin.ee/piYhcCd" target="_blank" rel="noopener">คลิกที่นี่</a>
-        </p>
+        </p>-->
         <div class="price-table-wrapper">
   <table class="price-table" aria-describedby="price-note" id="price-table">
     <!-- ... thead/tbody ตามเดิม ... -->
