--- a/products.html
+++ b/products.html
@@ -40,7 +40,7 @@
         <!-- card 1 -->
         <div class="product-card" data-category="skincare">
           <div class="product-image">
-            <img src="https://i.postimg.cc/rp8Cz6hX/image.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
+            <img src="https://i.postimg.cc/jd9BVwqn/58397-0.jpg" alt="อะโทมี่ เฟรช ซัน โลชั่น" loading="lazy">
           </div>
           <div class="product-info">
             <h3>อะโทมี่ เฟรช ซัน โลชั่น</h3>
