--- a/services.html
+++ b/services.html
@@ -154,7 +154,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span>© Heaven & Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
+      <p>&copy; <span id="year"></span>© Heaven & Beauty.</p>
     </div>
   </footer>
 
