--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> Heaven &amp; Beauty. ดูแลความงามและสุขภาพด้วยใจ</p>
+      <p>&copy; <span id="year"></span> Heaven &amp; Beauty.</p>
     </div>
   </footer>
 <!-- Bottom Navigation -->
