--- a/products.html
+++ b/products.html
@@ -128,7 +128,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span> © Heaven & Beauty.</p>
+      <p>&copy; <span id="year"></span> Heaven & Beauty.</p>
     </div>
   </footer>
 <!-- Bottom Navigation -->
