--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
 
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span>© Heaven & Beauty.</p>
+      <p>&copy; <span id="year"></span>Heaven & Beauty.</p>
     </div>
   </footer>
 
