Remove space before copyright text in footer

--- a/about.html
+++ b/about.html
@@ -127,7 +127,7 @@
   <!-- Footer -->
   <footer>
     <div class="container">
-      <p>&copy; <span id="year"></span>© Heaven & Beauty.</p>
+      <p>&copy; <span id="year"></span>Heaven & Beauty.</p>
     </div>
   </footer>
 
